[package]
name = "tyange-cms-api"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.13.1"
bcrypt = "0.17.0"
calamine = "0.26.1"
chrono = "0.4.40"
dotenv = "0.15.0"
feed-rs = "2.3.1"
hex = "0.4.3"
jsonwebtoken = "9.3.1"
poem = { version = "3.1.7", features = [
    "multipart",
    "static-files",
    "test",
] }
reqwest = { version = "0.12.15", default-features = false, features = [
    "charset",
    "http2",
    "json",
    "rustls-tls",
] }
serde = { version = "1.0.219", features = [
    "derive",
] }
serde_json = "1.0.140"
sha2 = "0.10.8"
sqlx = { version = "0.8.3", features = [
    "sqlite",
    "runtime-tokio",
] }
tokio = { version = "1.44.1", features = [
    "macros",
    "net",
    "rt-multi-thread",
    "time",
] }
url = "2.5.4"
web-push = "0.10.2"

[dependencies.uuid]
version = "1.16.0"
# Lets you generate random UUIDs
features = [
    "v4",
]
